{
  "sourceLanguage": "de",
  "strings": {
    "Alle zusammen": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Alle zusammen"
          }
...
